가상 데이터 추가 및 페이지 디자인 수정 및 가상 데이터에 따른 구조 변경

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "publish": "git add . && git commit && git push",
     "eslint": "eslint . --ext .jsx --fix, --ignore-pattern node_modules/"
   },
   "eslintConfig": {
