데이터 바인딩 준비 완료 및 CORS오류 때문에 설정파일 추가 및 결과페이지 수정
-오류 데이터 바인딩부분에서 백엔드 부분 코드 수정 필요 진행 불가

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bluebird": "^3.7.2",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
+    "http-proxy-middleware": "^2.0.1",
     "include-media": "^1.4.10",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
