--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_PATH= 'http://localhost:8080',
+BACKEND_BASE_URL= 'http://localhost:8080',
 
 REACT_APP_KAKAO_KEY= 15a4d53e0a645f328f92f010c998e863,
 
