--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ BACKEND_BASE_URL= 'http://localhost:8080',
 REACT_APP_KAKAO_KEY= 15a4d53e0a645f328f92f010c998e863,
 
 Cafe24_cupon= 'UVOGR97PR4'
+
+PUBLIC_URL= 'https://ayakmain.github.io/AyakQnAFront/'
