--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ayakmain.github.io/AyakQnAFront/",
   "name": "ayak-supplements",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "bluebird": "^3.7.2",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
+    "gh-pages": "^3.2.3",
     "http-proxy-middleware": "^2.0.1",
     "include-media": "^1.4.10",
     "moment": "^2.29.1",
@@ -32,7 +34,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "publish": "git add . && git commit && git push",
-    "eslint": "eslint . --ext .jsx --fix, --ignore-pattern node_modules/"
+    "eslint": "eslint . --ext .jsx --fix, --ignore-pattern node_modules/",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build" 
   },
   "eslintConfig": {
     "extends": [
