--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
+    "chart.js": "^3.5.1",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "gh-pages": "^3.2.3",
@@ -18,6 +19,7 @@
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.4",
