--- a/.env dist
+++ b/.env dist
@@ -1,2 +1,5 @@
-BACKEND_BASE_URL=
-REACT_APP_KAKAO_KEY=
+BACKEND_BASE_URL= 'http://localhost:8080',
+
+REACT_APP_KAKAO_KEY= 15a4d53e0a645f328f92f010c998e863,
+
+Cafe24_cupon= 'UVOGR97PR4'
